--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,8 @@ code {
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   gap: 20px;
+  height: 100vh;
 }
